welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: identifier expected but integer literal found.
  var pos :Int=-1
                ^indexOfValue:4: error: '(' expected but identifier found.
  for k(<-0 to n-1){
      ^indexOfValue:11: error: illegal start of simple expression
}return pos 
^indexOfValue:11: error: ';' expected but 'return' found.
}return pos 
 ^